# MacMarket-Trader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README-deploy.txt  README.md  alembic.ini  bootstrap_admin.py  deploy-macmarket-trader.bat  deploy-macmarket-trader.bat - Shortcut.lnk  pyproject.toml  restart-macmarket-trader.bat
.claude/: settings.local.json
alembic/: env.py
docs/: active-paper-position-management-design.md  alpha-user-welcome.md  architecture.md  auth-and-approval.md  caddy-reverse-proxy-guide.md  claude-code-guide.md  legacy-policy.md  local-development.md  macmarket-external-access-guide.md  market-data.md  market-risk-calendar-design.md  options-architecture.md  options-paper-lifecycle-design.md  options-replay-design.md  options-risk-ux-design.md  options-test-plan.md  private-alpha-operator-runbook.md  provider-architecture.md  roadmap-status.md  rth-intraday-normalization-design.md  scheduled-reports.md  symbol-watchlist-design.md  windows-deployment.md
scripts/: backup_sqlite.ps1  backup_sqlite.py  check_conflict_markers.py  check_release_artifact.py  create_clean_release_archive.py  create_shareable_backup.bat  deploy_windows.bat  generate_release_evidence.py  reconcile_duplicate_users.py  restart_windows.bat  run-due-schedules-hidden.vbs  run-due-schedules.ps1  run_backend_dev_windows.bat  run_frontend_dev_windows.bat  run_model_validation.py  run_release_gate.ps1  run_release_gate.py  scan_secrets.py  schedule_backup_windows_task.ps1  seed_demo_data.py  setup_task_scheduler.bat  smoke_alpha.py  start_cloudflare_tunnel.bat  (+2 more)
(+349 files in other folders)
