[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macmarket-trader"
version = "0.1.0"
description = "Research-first, event-driven trading system scaffold"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "MacMarket-Trader"}]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "PyJWT[crypto]>=2.9,<3.0",
]


[project.scripts]
macmarket-trader = "macmarket_trader.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "mypy>=1.10",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
